# wavy

./: LICENSE  README.md
client/: main.c  meson.build  registry.c  registry.h  run.sh  shm.c  state.h  xdg.c  xdg.h
client/lib/: shm.c  shm.h
lib/: shm.c  shm.h
server/: main.c  meson.build
